# contract-ai

./: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  skaffold.yaml
api/proto/v1/nlp/: nlp.proto
cmd/: contract-ai.go
cmd/api/: api.go
helm/contract-ai/: Chart.yaml  values.yaml
helm/contract-ai/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/contract-ai/templates/tests/: test-connection.yaml
helm/nlpservice/: Chart.yaml  values.yaml
helm/nlpservice/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
nlp-service/: Dockerfile  pyproject.toml  requirements.txt
nlp-service/nlpservice/: nlp_pb2.py  nlp_pb2_grpc.py  server.py
pkg/api/v1/nlp/: nlp.pb.go
